@@ -4,6 +4,7 @@
 	(install-data-local): If SWARMDLL is set, install libswarm.a and
 	run ranlib on installed version.
 	(EXTRA_PROGRAMS): Add swarm.dll.
+	(swarm.dll): Add init routine.
 
 1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
